added emotion description interface

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get In Touch"
-            android:textColor="#0088FF"
+            android:textColor="#1E88E5"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +83,7 @@
             android:layout_height="307dp"
             android:background="@drawable/my_border"
             android:singleLine="false"
-            android:text="TextView"
+            android:textColor="@color/black"
             app:drawableTint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
