--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -34,7 +34,7 @@
             app:layout_constraintVertical_bias="0.247" />
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/GetInTouchTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get In Touch"
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_bias="0.15" />
 
         <Button
-            android:id="@+id/sendbutton"
+            android:id="@+id/GetInTouchSendButton"
             android:layout_width="367dp"
             android:layout_height="42dp"
             android:background="@color/colorAccent"
@@ -78,12 +78,13 @@
             app:layout_constraintVertical_bias="0.888" />
 
         <EditText
-            android:id="@+id/messageText"
+            android:id="@+id/GetInTouchMessageText"
             android:layout_width="366dp"
             android:layout_height="307dp"
             android:background="@drawable/my_border"
             android:singleLine="false"
             android:textColor="@color/black"
+            android:gravity="top|start"
             app:drawableTint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
