--- a/app/src/main/res/layout/activity_createaccount.xml
+++ b/app/src/main/res/layout/activity_createaccount.xml
@@ -6,26 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".Signup">
+    tools:context=".CreateAccount">
 
     <Button
-        android:id="@+id/signupbutton"
+        android:id="@+id/createaccountbutton"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginBottom="84dp"
         android:background="#FFEB3B"
-        android:text="Sign Up"
+        android:text="Create Account"
         android:textColor="@color/black"
         app:backgroundTint="#0088FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSignup"
+        app:layout_constraintTop_toBottomOf="@+id/passwordcreateaccount"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/passwordSignup"
+        android:id="@+id/passwordcreateaccount"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:background="@drawable/custom_input_label"
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.695" />
 
     <EditText
-        android:id="@+id/fullnameSignup"
+        android:id="@+id/fullnamecreateaccount"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:background="@drawable/custom_input_label"
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.32" />
 
     <EditText
-        android:id="@+id/phoneSignup"
+        android:id="@+id/phonecreateaccount"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:background="@drawable/custom_input_label"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.568" />
 
     <EditText
-        android:id="@+id/emailSignup"
+        android:id="@+id/emailcreateaccount"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:background="@drawable/custom_input_label"
@@ -89,7 +89,7 @@
         app:layout_constraintVertical_bias="0.446" />
 
     <ImageView
-        android:id="@+id/logo4"
+        android:id="@+id/signuplogo"
         android:layout_width="178dp"
         android:layout_height="90dp"
         android:background="#FFFFFF"
@@ -102,10 +102,10 @@
         app:layout_constraintVertical_bias="0.003" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/createaccounttextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Create Account"
         android:textColor="#0088FF"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -126,7 +126,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupbutton"
+        app:layout_constraintTop_toBottomOf="@+id/createaccountbutton"
         app:layout_constraintVertical_bias="0.82" />
 
     <ProgressBar
@@ -137,7 +137,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/Textviewlogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupbutton"
+        app:layout_constraintTop_toBottomOf="@+id/createaccountbutton"
         app:layout_constraintVertical_bias="0.222"
         tools:visibility="invisible" />
 
