--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -65,7 +65,7 @@ tools:context=".MapsActivity">
         android:onClick="searchLocation"/>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/emotionlistbutton"
         android:layout_width="42dp"
         android:layout_height="51dp"
         android:src="@drawable/ic_baseline_more_vert_24"
